--- a/wlHope/Main/Scene/ProfileTypes/View/ProfileTypesViewController.xib
+++ b/wlHope/Main/Scene/ProfileTypes/View/ProfileTypesViewController.xib
@@ -10,8 +10,10 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <objects>
-        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileTypesViewController" customModule="wlHope" customModuleProvider="target">
+        <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner" customClass="ProfileTypesViewController" customModule="wlFilhas" customModuleProvider="target">
             <connections>
+                <outlet property="nextQuestionButton" destination="3ze-z4-nlW" id="TiB-O1-7jn"/>
+                <outlet property="tableView" destination="buq-1A-6j3" id="fuu-1a-YDI"/>
                 <outlet property="view" destination="i5M-Pr-FkT" id="sfx-zR-JGt"/>
             </connections>
         </placeholder>
@@ -20,9 +22,13 @@
             <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
             <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
             <subviews>
-                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="default" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="buq-1A-6j3">
+                <tableView clipsSubviews="YES" contentMode="scaleToFill" alwaysBounceVertical="YES" style="plain" separatorStyle="none" rowHeight="-1" estimatedRowHeight="-1" sectionHeaderHeight="-1" estimatedSectionHeaderHeight="-1" sectionFooterHeight="-1" estimatedSectionFooterHeight="-1" translatesAutoresizingMaskIntoConstraints="NO" id="buq-1A-6j3">
                     <rect key="frame" x="0.0" y="151" width="414" height="659"/>
                     <color key="backgroundColor" name="BackgroundLS"/>
+                    <connections>
+                        <outlet property="dataSource" destination="-1" id="NsU-FB-isp"/>
+                        <outlet property="delegate" destination="-1" id="rsW-HG-sY8"/>
+                    </connections>
                 </tableView>
                 <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="NtL-KS-htM">
                     <rect key="frame" x="18" y="64" width="25" height="22"/>
@@ -36,6 +42,9 @@
                             </hierarchicalColors>
                         </imageReference>
                     </state>
+                    <connections>
+                        <action selector="backButtonTapped:" destination="-1" eventType="touchUpInside" id="sjN-xq-SjC"/>
+                    </connections>
                 </button>
                 <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Com qual destes perfis você mais se identifica?" textAlignment="natural" lineBreakMode="tailTruncation" numberOfLines="2" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="6sW-07-nOX">
                     <rect key="frame" x="20" y="98" width="374" height="41"/>
